Agregadas alert personalizadas con SweetAlert2 + Borrado de comentarios obsoletos + Agregadas imagenes necesarias en la carpeta assets

--- a/src/app/component/educacion/educacion-edit.component.html
+++ b/src/app/component/educacion/educacion-edit.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcionEd">Descripción</label>
-                    <input type="text" class="form-control" id="descripcionEd" name="descripcionEd" [(ngModel)]="educacion.descripcionEd" required>
+                    <textarea type="text" class="form-control" id="descripcionEd" name="descripcionEd" rows="3" [(ngModel)]="educacion.descripcionEd" required></textarea>
                 </div>
 
                 <!-- INICIO BOTON SUBMIT -->
