--- a/src/app/component/educacion/educacion-new.component.html
+++ b/src/app/component/educacion/educacion-new.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcionEd">Descripción</label>
-                    <input type="text" class="form-control" id="descripcionEd" name="descripcionEd" [(ngModel)]="descripcionEd" placeholder="Por ej. Detectar y analizar problemas de procesamiento de datos brindando herramientas para su resolución..." required>
+                    <textarea type="text" class="form-control" id="descripcionEd" name="descripcionEd" rows="3" [(ngModel)]="descripcionEd" placeholder="Por ej. Detectar y analizar problemas de procesamiento de datos brindando herramientas para su resolución..." required></textarea>
                 </div>
 
                 <!-- INICIO BOTON SUBMIT -->
