--- a/src/app/component/educacion/educacion.component.html
+++ b/src/app/component/educacion/educacion.component.html
@@ -31,7 +31,7 @@
       <!-- FIN BOTON EDITAR Y BORRAR -->
 
       <!-- INICIO DATOS -->
-      <dt class="-fontTITULO">{{educacion.tituloEd}}</dt>
+      <dt class="-fontTITULO -fontVIOLETA">{{educacion.tituloEd}}</dt>
       <dd class="fst-italic mb-0">{{educacion.institucion}}</dd>
       <dd class="text-muted mb-0">{{educacion.fechaInicio}} - {{educacion.fechaFin}}</dd>
       <dd class="-mb18PX">{{educacion.descripcionEd}}</dd>   
