--- a/src/app/component/experiencia/experiencia.component.html
+++ b/src/app/component/experiencia/experiencia.component.html
@@ -31,7 +31,7 @@
       <!-- FIN BOTON EDITAR Y BORRAR -->
 
       <!-- INICIO DATOS -->
-      <dt class="-fontTITULO">{{experiencia.tituloEx}}</dt>
+      <dt class="-fontTITULO -fontVIOLETA">{{experiencia.tituloEx}}</dt>
       <dd class="fst-italic mb-0">{{experiencia.empleador}}</dd>
       <dd class="text-muted mb-0">{{experiencia.fechaInicio}} - {{experiencia.fechaFin}}</dd>
       <dd class="-mb18PX">{{experiencia.descripcionEx}}</dd>
