--- a/src/app/component/proyecto/proyecto-new.component.html
+++ b/src/app/component/proyecto/proyecto-new.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcionPr">Descripción</label>
-                    <input type="text" class="form-control" id="descripcionPr" name="descripcionPr" [(ngModel)]="descripcionPr" placeholder="Por ej. Realizado en Angular" required>
+                    <textarea type="text" class="form-control" id="descripcionPr" name="descripcionPr" rows="3" [(ngModel)]="descripcionPr" placeholder="Por ej. Realizado en Angular" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="imgPr">Url de la imagen</label>
