--- a/src/app/component/proyecto/proyecto.component.html
+++ b/src/app/component/proyecto/proyecto.component.html
@@ -24,7 +24,7 @@
       <!-- INICIO DATOS -->
       <!-- Si esta log ocupa 7 columnas -->
       <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" *ngIf="isLogged">
-        <dt class="--tituloPr">{{proyecto.tituloPr}}</dt>
+        <dt class="--tituloPr -fontVIOLETA">{{proyecto.tituloPr}}</dt>
         <dd class="fst-italic -mb18PX">{{proyecto.descripcionPr}}</dd>
       </div>
       <!-- Si no esta log ocupa 8 columnas -->
