--- a/src/app/component/acerca/acerca-edit.component.html
+++ b/src/app/component/acerca/acerca-edit.component.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcion">Descripcion</label>
-                    <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
+                    <textarea type="text" class="form-control" id="descripcion" name="descripcion" rows="3" [(ngModel)]="persona.descripcion" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="img">Url de la imagen</label>
