--- a/src/app/component/experiencia/experiencia-new.component.html
+++ b/src/app/component/experiencia/experiencia-new.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcionEx">Descripción</label>
-                    <input type="text" class="form-control" id="descripcionEx" name="descripcionEx" [(ngModel)]="descripcionEx" placeholder="Por ej. Desarrollo y mantenimiento de páginas web..." required>
+                    <textarea type="text" class="form-control" id="descripcionEx" name="descripcionEx" rows="3" [(ngModel)]="descripcionEx" placeholder="Por ej. Desarrollo y mantenimiento de páginas web..." required></textarea>
                 </div>
 
                 <!-- INICIO BOTON SUBMIT -->
