Modificado css de proyecto, agregados archivos del README

--- a/src/app/component/proyecto/proyecto.component.html
+++ b/src/app/component/proyecto/proyecto.component.html
@@ -29,7 +29,7 @@
       </div>
       <!-- Si no esta log ocupa 8 columnas -->
       <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8" *ngIf="!isLogged">
-        <dt class="--tituloPr">{{proyecto.tituloPr}}</dt>
+        <dt class="--tituloPr -fontVIOLETA">{{proyecto.tituloPr}}</dt>
         <dd class="fst-italic -mb18PX">{{proyecto.descripcionPr}}</dd>
       </div>
       <!-- INICIO IMAGEN Y LINK REPO -->
