Modificado frontend para render

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -15,13 +15,13 @@
             <ul class="navbar-nav --navREDES">
                 <!-- INICIO LOGOS REDES -->
                 <li class="nav-item pr-3">
-                    <a class="nav-link --btnREDES" (click)="isMenuCollapsed = true" href="https://github.com/jc-projects" target="_blank">
+                    <a class="nav-link --btnREDES" (click)="isMenuCollapsed = true" href="https://github.com/joana-coll" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </li>
                 <li class="nav-item pr-3">
-                    <a class="nav-link --btnREDES" (click)="isMenuCollapsed = true" href="https://www.instagram.com/einenko" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
+                    <a class="nav-link --btnREDES" (click)="isMenuCollapsed = true" href="https://ar.linkedin.com/in/joana-coll" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
                 <!-- FIN LOGOS REDES -->
